k8s/manifests/kyverno/kyverno-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno
  labels:
    tier: infra
