k8s/manifests/kyverno/deny-latest.yaml
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: deny-latest-image
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]

      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments", "daemonsets", "statefulsets"]

      - apiGroups: ["batch"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["jobs", "cronjobs"]

  matchConditions:
    - name: exclude-system-namespaces
      expression: >
        !(object.metadata.namespace in [
          'argocd', 'cilium-secrets', 'falco', 'grafana',
          'kube-node-lease', 'kube-public', 'kube-system',
          'kyverno', 'monitoring', 'prometheus', 'loki', 'alloy'
        ])

  validations:
    - message: "please do not use ':latest' image in containers (workload)"
      expression: "!has(object.spec.template) || object.spec.template.spec.containers.all(c, !c.image.endsWith(':latest'))"

    - message: "please do not use ':latest' image in initContainers (workload)"
      expression: "!has(object.spec.template) || !has(object.spec.template.spec.initContainers) || object.spec.template.spec.initContainers.all(c, !c.image.endsWith(':latest'))"

    - message: "please do not use ':latest' image in containers (pod)"
      expression: "has(object.spec.template) || has(object.spec.jobTemplate) || object.spec.containers.all(c, !c.image.endsWith(':latest'))"

    - message: "please do not use ':latest' image in initContainers (pod)"
      expression: "has(object.spec.template) || has(object.spec.jobTemplate) || !has(object.spec.initContainers) || object.spec.initContainers.all(c, !c.image.endsWith(':latest'))"

    - message: "please do not use ':latest' image in containers (cronJob)"
      expression: "!has(object.spec.jobTemplate) || object.spec.jobTemplate.spec.template.spec.containers.all(c, !c.image.endsWith(':latest'))"

    - message: "please do not use ':latest' image in initContainers (cronJob)"
      expression: "!has(object.spec.jobTemplate) || !has(object.spec.jobTemplate.spec.template.spec.initContainers) || object.spec.jobTemplate.spec.template.spec.initContainers.all(c, !c.image.endsWith(':latest'))"
