k8s/manifests/kyverno/require-labels.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: require-labels-on-resources 
spec: 
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
        
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments", "daemonsets", "statefulsets"]
        
      - apiGroups: ["batch"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["jobs", "cronjobs"]

  matchConditions:
    - name: exclude-system-namespaces
      expression: >
        !(object.metadata.namespace in [
          'argocd', 'cilium-secrets', 'falco', 'grafana',
          'kube-node-lease', 'kube-public', 'kube-system',
          'kyverno', 'monitoring', 'prometheus'
        ])
  validations:
    - message: "Please add at least one of the following labels to the resource: 'env', 'prod', or 'team'."
      expression: "has(object.metadata.labels) && ['env', 'prod', 'team'].exists(k, k in object.metadata.labels)"
